Add subjects api router

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "description": "",
   "dependencies": {
     "express": "^5.2.1",
